# fps

./: README.md  pyproject.toml
docs/: conf.py  fps.rst  modules.rst
examples/: .gitignore  BayesNN.py  test_distributions.py  test_kRAM.py  test_kRAM_minimal.py
examples/cluster_runs/escher02/: README.md  job.sh
examples/cluster_runs/escher05/: README.md  job.sh  job_test_distr.sh  launch.sub
src/fps/: __init__.py  _utility.py  kernel_ram_solver.py  picard_solver.py  stein_manifold.py
