[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fps"
authors = [
  {name = "Vitalii Aksenov", email = "viviaxenov@gmail.com"},
]
readme = 'README.md'
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
    "jaxtyping>=0.3.2",
]

[project.optional-dependencies]
cuda13 = ["jax[cuda13]"]
cuda12 = ["jax[cuda12]"]
examples = [
    "flax==0.12.2",
    "emcee",
    "matplotlib",
    "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

